# PDF-QnA-Chatbot

./: .dockerignore  .gitignore  Dockerfile  check_chroma_size.py  pyproject.toml  run_app.py
backend/: llm.py  main.py  vector_db.py
frontend/: app.py
pdf_vector_db/: chroma.sqlite3
