[project]
name = "demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bugsink>=2.0.4",
    "chromadb>=1.1.1",
    "docling>=2.55.1",
    "fastapi[standard]>=0.118.2",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.31",
    "langchain-huggingface>=0.3.1",
    "langchain-ollama>=0.3.10",
    "pymupdf>=1.26.5",
    "pyngrok>=7.4.0",
    "pypdf2>=3.0.1",
    "sentence-transformers>=5.1.1",
    "sentry-sdk>=2.41.0",
    "streamlit>=1.50.0",
    "uvicorn>=0.37.0",
]
